--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/luxon": "^2.0.9",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.18",
+    "ajv-cli": "^5.0.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
