--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,5 +1,4 @@
 on:
-  - push
   - pull_request
 
 jobs:
@@ -12,13 +11,14 @@ jobs:
       - uses: pnpm/action-setup@v2.1.0
         with:
           version: 6.31.0
-          run_install: |
-            - args: [--frozen-lockfile, --strict-peer-dependencies]
 
       - uses: actions/setup-node@v2
         with:
           node-version: v16.14.0
           cache: 'pnpm'
+
+      - name: install deps
+        run: pnpm i --frozen-lockfile, --strict-peer-dependencies
 
       - name: validate all params.json
         run: ajv -s params.schema.json -d "queries/*/params.json"
