--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -18,7 +18,7 @@ jobs:
           cache: 'pnpm'
 
       - name: install deps
-        run: pnpm i --frozen-lockfile, --strict-peer-dependencies
+        run: pnpm i --frozen-lockfile --strict-peer-dependencies
 
       - name: validate all params.json
         run: ajv -s params.schema.json -d "queries/*/params.json"
