--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -21,7 +21,7 @@ jobs:
         run: pnpm i --frozen-lockfile --strict-peer-dependencies
 
       - name: validate all params.json
-        run: ajv -s params.schema.json -d "queries/*/params.json"
+        run: pnpx ajv -s params.schema.json -d "queries/*/params.json"
 
       - name: build
         run: pnpm run build
