--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postinstall": "pnpm run build",
     "build": "tsc",
     "server:start": "node index.js",
-    "dev": "ts-node index.ts",
+    "dev": "tsc && ts-node index.ts",
+    "prefetch": "tsc && ts-node compute-prefetch-enums.js",
     "gen:schema-ts": "json2ts params.schema.json params.schema.d.ts",
     "validate:params": "ajv -s params.schema.json -d \"queries/*/params.json\""
   },
@@ -27,7 +28,9 @@
     "luxon": "^2.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "octokit": "^1.7.1"
+    "octokit": "^1.7.1",
+    "redis": "^4.0.4",
+    "tiny-async-pool": "^1.2.0"
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
@@ -36,6 +39,7 @@
     "@types/luxon": "^2.0.9",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.18",
+    "@types/tiny-async-pool": "^1.0.0",
     "ajv-cli": "^5.0.0",
     "json-schema-to-typescript": "^10.1.5",
     "ts-node": "^10.5.0",
