config: rename to gharchive.live-api

--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "gharchive.live-backend",
+  "name": "gharchive.live-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start --cwd $(pwd) 'pnpm run server:start' --name 'gharchive.live-backend'",
-    "stop": "pm2 stop 'gharchive.live-backend'",
-    "restart": "pm2 restart 'gharchive.live-backend'",
-    "remove": "pm2 delete 'gharchive.live-backend'",
+    "start": "pm2 start --cwd $(pwd) 'pnpm run server:start' --name 'gharchive.live-api'",
+    "stop": "pm2 stop 'gharchive.live-api'",
+    "restart": "pm2 restart 'gharchive.live-api'",
+    "remove": "pm2 delete 'gharchive.live-api'",
+    "prefetch:start": "pm2 start --cwd $(pwd) 'pnpm run server:prefetch' --name 'gharchive.live-api-prefetch'",
+    "prefetch:stop": "pm2 stop 'gharchive.live-api-prefetch'",
+    "prefetch:restart": "pm2 restart 'gharchive.live-api-prefetch'",
+    "prefetch:remove": "pm2 delete 'gharchive.live-api-prefetch'",
     "postinstall": "pnpm run build",
     "build": "tsc",
     "server:start": "node index.js",
+    "server:prefetch": "node compute-prefetch-enums.js",
     "dev": "tsc && ts-node index.ts",
     "prefetch": "tsc && ts-node compute-prefetch-enums.js",
     "gen:schema-ts": "json2ts params.schema.json params.schema.d.ts",
