feat: add search repos rate limiter

--- a/.env.template
+++ b/.env.template
@@ -11,8 +11,13 @@ SERVER_PORT=3450
 GH_TOKENS=''
 REDIS_URL=
 PREFETCH_CONCURRENT=3
-RATE_LIMIT_INTERVAL=1
-RATE_LIMIT_MAX_REQUEST=60
+ENABLE_RATE_LIMIT=1
+GLOBAL_RATE_LIMIT_INTERVAL=10
+GLOBAL_RATE_LIMIT_MAX_REQUEST=1000
+GET_REPO_RATE_LIMIT_INTERVAL=1
+GET_REPO_RATE_LIMIT_MAX_REQUEST=60
+SEARCH_REPO_RATE_LIMIT_INTERVAL=1
+SEARCH_REPO_RATE_LIMIT_MAX_REQUEST=20
 # tidb cloud login (auth0)
 AUTH0_SIGNUP_REDIRECT=
 AUTH0_CALLBACK_REDIRECT=
