feat: add cache gc program

--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "prefetch:stop": "pm2 stop 'gharchive.live-api-prefetch'",
     "prefetch:restart": "pm2 restart 'gharchive.live-api-prefetch'",
     "prefetch:remove": "pm2 delete 'gharchive.live-api-prefetch'",
+    "gc:start": "pm2 start --cwd $(pwd) 'pnpm run server:gc' --name 'gharchive.live-api-cache-gc'",
+    "gc:stop": "pm2 stop 'gharchive.live-api-cache-gc'",
+    "gc:restart": "pm2 restart 'gharchive.live-api-cache-gc'",
+    "gc:remove": "pm2 delete 'gharchive.live-api-cache-gc'",
     "postinstall": "pnpm run build",
     "build": "tsc",
     "server:start": "node index.js",
     "server:prefetch": "node compute-prefetch-enums.js",
+    "server:gc": "node cache-gc.js",
     "dev": "tsc && ts-node index.ts",
     "prefetch": "tsc && ts-node compute-prefetch-enums.js",
     "generate-company-name-sql": "tsc && ts-node generate-company-name-sql.js",
